add player stats value type
