# gamestats-application/docs/swagger.json
@@ -208,6 +208,29 @@
                 },
                 "matchType": {
                     "$ref": "#/definitions/entities.MatchType"
+                },
+                "playerStats": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/api.PlayerStatsDto"
+                    }
+                }
+            }
+        },
+        "api.PlayerStatsDto": {
+            "type": "object",
+            "properties": {
+                "deaths": {
+                    "type": "integer"
+                },
+                "kills": {
+                    "type": "integer"
+                },
+                "playerId": {
+                    "type": "string"
+                },
+                "score": {
+                    "type": "integer"
                 }
             }
         },
